gccida/g1/cse_set_around_loop
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_set_around_loop/src/cse.c:7184:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_set_around_loop/src/cse.c:7203:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v5.rtwint = ( __int64)x->fld[0]; 
                      ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_set_around_loop/src/cse.c:7206:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v6 = (  struct rtx_def *)x[1]; 
                         ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_set_around_loop/src/cse.c:7226:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v14 = (  struct rtx_def *)x[1]; 
                          ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_set_around_loop/src/cse.c:7232:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v14 = (  struct rtx_def *)x[1]; 
                          ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_set_around_loop/src/cse.c:7248:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v18 = ( rtx)nonnote_insn[2]; 
            ^~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_set_around_loop/src/cse.c:7252:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v19.rtwint = ( __int64)v18->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_set_around_loop/src/cse.c:7257:39: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
cse_check_loop_start_value[0] = ( rtx)x[1]; 
                                      ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_set_around_loop/src/cse.c:7303:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v7.rtwint = ( __int64)x->fld[0]; 
                      ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_set_around_loop/src/cse.c:7311:42: error: use of undeclared identifier 'machine_mode'
invalidate( *( rtx *)( v7.rtwint + 8), ( machine_mode)*( unsigned __int8 *)( v7.rtwint + 2)); 
                                         ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_set_around_loop/src/obj/cse.o] Error 1
